--- a/index.html
+++ b/index.html
@@ -1,79 +1,134 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="demo">
+<head lang="en">
+  <meta charset="UTF-8">
+  <title>JSONPretty</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="renderer" content="webkit">
+  <meta http-equiv="Cache-Control" content="no-siteapp"/>
+  <link rel="alternate icon" type="image/png" href="img/favicon.png">
+  <link rel="stylesheet" href="bower/amazeui/dist/css/amazeui.min.css"/>
+  <link rel="stylesheet" href="bower/animate.css/animate.min.css"/>
+  <link rel="stylesheet" href="prism.css">
+  <link rel="stylesheet" href="angular-json-pretty.css"/>
+  <link rel="stylesheet" href="demo.css"/>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="angular-json-pretty : A directive make json object or string printed in human readable way">
+</head>
+<body>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>angular-json-pretty</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/leftstick/angular-json-pretty">View on GitHub</a>
-
-          <h1 id="project_title">angular-json-pretty</h1>
-          <h2 id="project_tagline">A directive make json object or string printed in human readable way</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/leftstick/angular-json-pretty/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/leftstick/angular-json-pretty/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+<div class="get">
+  <div class="am-g">
+    <div class="am-u-lg-12">
+      <h1 class="get-title animated rubberBand">angular-json-pretty</h1>
+      <p>
+        Directive for prettifying JSON
+      </p>
+      <p>
+      <a href="https://github.com/leftstick/angular-json-pretty" class="am-icon-btn am-icon-github github-source" data-am-popover="{content: 'Fork on Github', trigger: 'hover focus'}"></a>
+      </p>
     </div>
+  </div>
+</div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<div class="detail" ng-controller="DemoController">
+  <div class="am-g am-container">
+    <div class="am-u-lg-12">
+      <h2 class="detail-h2">One line code, prettify the JSON for you!</h2>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+      <div class="am-g">
+        <div class="am-u-lg-12 am-u-md-12 am-u-sm-12 detail-mb">
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+            <div class="code-title">
+                <span>Display JSON Object</span>
+            </div>
+
+            <div class="am-tabs" data-am-tabs>
+              <ul class="am-tabs-nav am-nav am-nav-tabs">
+                <li class="am-active"><a href="#html">HTML</a></li>
+                <li><a href="#javascript">JavaScript</a></li>
+                <li><a href="#result">Result</a></li>
+              </ul>
+
+              <div class="am-tabs-bd">
+                <div class="am-tab-panel am-fade am-in am-active" id="html">
+                   <pre><code class="language-markup"><!-- 
+                    -->&lt;pre json-pretty data="jsonObj"&gt;&lt;/pre&gt;<!-- 
+                    --></code></pre>
+                </div>
+                <div class="am-tab-panel am-fade" id="javascript">
+                  <pre><code class="language-javascript"><!-- 
+                  -->demo.controller('DemoController', function($scope) {
+    $scope.jsonObj = {
+        labels: ['1', '2', '3', '4', '5', '6'],
+        series: [{
+            name: 'Fibonacci sequence',
+            data: [1, 2, 3, 5, 8, 13]
+        }, {
+            name: 'Golden section',
+            data: [1, 1.618, 2.618, 4.236, 6.854, 11.09]
+        }]
+    };
+});
 </code></pre>
+                </div>
+                <div class="am-tab-panel am-fade" id="result">
+                     <pre json-pretty data="jsonObj"></pre>
+                </div>
+              </div>
+            </div>
+        </div>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+        <div class="am-u-lg-12 am-u-md-12 am-u-sm-12 detail-mb">
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+            <div class="code-title">
+                <span>Display JSON String</span>
+            </div>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+            <div class="am-tabs" data-am-tabs>
+              <ul class="am-tabs-nav am-nav am-nav-tabs">
+                <li class="am-active"><a href="#html">HTML</a></li>
+                <li><a href="#javascript">JavaScript</a></li>
+                <li><a href="#result">Result</a></li>
+              </ul>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+              <div class="am-tabs-bd">
+                <div class="am-tab-panel am-fade am-in am-active" id="html">
+                   <pre><code class="language-markup"><!-- 
+                    -->&lt;pre json-pretty data="jsonStr"&gt;&lt;/pre&gt;<!-- 
+                    --></code></pre>
+                </div>
+                <div class="am-tab-panel am-fade" id="javascript">
+                  <pre><code class="language-javascript"><!-- 
+                  -->demo.controller('DemoController', function($scope) {
+    $scope.jsonStr = '{"name":"Test","series":[{"name":"Fibonacci sequence","data":[1,2,3,5,8,13]}]}';
+});
+</code></pre>
+                </div>
+                <div class="am-tab-panel am-fade" id="result">
+                     <pre json-pretty data="jsonStr"></pre>
+                </div>
+              </div>
+            </div>
+        </div>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
+      </div>
     </div>
+  </div>
+</div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">angular-json-pretty maintained by <a href="https://github.com/leftstick">leftstick</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+<footer class="footer">
+  <p>&copy; 2014 Licensed under <a
+      href="https://raw.githubusercontent.com/leftstick/angular-json-pretty/master/LICENSE" target="_blank">MIT license</a>. by the Howard.Zuo</p>
+</footer>
 
-    
-
-  </body>
+<script type="text/javascript" src="bower/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="bower/amazeui/dist/js/amazeui.min.js"></script>
+<script type="text/javascript" src="prism.js"></script>
+<script type="text/javascript" src="bower/angular/angular.min.js"></script>
+<script type="text/javascript" src="angular-json-pretty.js"></script>
+<script type="text/javascript" src="demo.js"></script>
+</body>
 </html>
